crates/salti/src/ui/snapshots/salti__ui__render__tests__loading.snap
---
source: salti/src/ui/render.rs
expression: "render_text(None, &ui)"
---
                 File: Unknown | Loading alignment.fasta | 0 alignments | Length: 0 | Positions: 0-0










                                       Loading alignment.fasta
