crates/salti/src/ui/snapshots/salti__ui__render__tests__selection_status.snap
---
source: salti/src/ui/render.rs
expression: "render_text(Some(&session), &ui)"
---
                     File: test.fasta | Status: Loaded | 4 alignments | Length: 18 | Positions: 1-18
┌──────────────────┬───────────────────────────────────────────────────────────────────────────────┐
│                  │1       10                                                                     │
│                  │.   .    |    .                                                                │
│1 seq1            │CATCATCATCATCATCAT                                                             │
│2 seq2            │CATCATGATCATCATCAT                                                             │
│3 seq3            │CATCATCATCATGATCAT                                                             │
│4 seq4            │CATCATCATCATCATCAT                                                             │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
├──────────────────┼───────────────────────────────────────────────────────────────────────────────┤
│Reference Sequence│No reference selected.                                                         │
│Consensus Sequence│CATCATCATCATCATCAT                                                             │
│Conservation:     │██████▅█████▅█████                                                             │
└──────────────────┴───────────────────────────────────────────────────────────────────────────────┘
                                                                        2 sequence(s) selected @ 3-9
